--- a/index.html
+++ b/index.html
@@ -64,11 +64,11 @@
             "fontName": "Mali",
             "color": "#ff0019",
             "messages": [
-              "Github WusThanhDieu",
-              "Test 1",
-              "Test 2"
+              "&#10084; H &#10084;",
+              "Em yêu anh &#10084;",
+              "Sẽ mang thật nhiều hạnh phúc cho anh &#129392;"
             ],
-            "music": "//thanhdieu.com/music.mp3"
+            "music": "https://thhlam77.github.io/music/forget.mp3"
           },
           "clientId": "/"
         },
